--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-single-page-developer-portfolio-figma
-single-page-developer-portfolio
+# Avoid accidental upload of the Sketch and Figma design files
+#####################################################
+## Please do not remove lines 5 and 6 - thanks! 🙂 ##
+#####################################################
+*.sketch
+*.fig
+
+
+# Avoid your project being littered with annoying .DS_Store files!
+.DS_Store
+.prettierignore
